# string-scribe

./: .gitignore  README.md  package-lock.json
backend/: Dockerfile  fly.toml  logger.py  main.py  model.py  pyproject.toml  requirements.txt  util.py
backend/client/: client.py
backend/engine/: engine.py
backend/middleware/: rate_limit.py
frontend/: Dockerfile  fly.toml  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  config.tsx  index.tsx  types.ts  types.tsx  util.tsx
frontend/src/components/: AccountDrawer.tsx  FileUpload.tsx  Header.tsx  LoginButton.tsx  MusicViewer.tsx  PaywallDialog.tsx  SubListItem.tsx  SubscriptionMessages.tsx  TOS.tsx  YouTubeUpload.tsx
frontend/src/pages/: About.tsx  Home.tsx  NotFound.tsx  Subscriptions.tsx  Terms.tsx
frontend/src/requests/: index.ts  index.tsx
