[project]
name = "string-scribe"
version = "0.1.0"
description = ""
authors = [
    {name = "Cody Hager", email = "chager004@gmail.com"}
] 
requires-python = ">=3.10,<=3.11.9"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "numba (>=0.61.2,<0.62.0)",
    "basic-pitch (>=0.4.0,<0.5.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "music21 (>=9.7.1,<10.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "stripe (>=12.4.0,<13.0.0)",
    "pydantic (>=2.12.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false