[tool.poetry]
name = "string-scribe"
version = "0.1.0"
description = ""
authors = ["Cody Hager <chager004@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = {extras = ["standard"], version = "^0.121.1"}
uvicorn = "^0.35.0"
llvmlite = "^0.44.0"
numba = "^0.61.2"
basic-pitch = {extras = ["onnx"], version = "^0.4.0"}
setuptools = "^80.9.0"
python-multipart = "^0.0.20"
music21 = "^9.7.1"
librosa = "^0.11.0"
stripe = "^12.4.0"
pydantic = "^2.12.2"
requests = "^2.32.5"
onnxruntime = "^1.23.2"
yt-dlp = "^2025.11.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
